be implementation